--- a/heroes.html
+++ b/heroes.html
@@ -64,10 +64,18 @@
             </select><br><br>
 
             <button type="submit" id="btn-dialog-cadastrar">Cadastrar</button>
-            <button type="button" id="btn-dialog-cancelar">X</button>
+            <button type="button" id="btn-dialog-cadastrar-fechar">X</button>
         </form>
+    </dialog>
 
-
+    <dialog id="dialog-excluir">
+        <h2>Excluir Herói</h2>
+        <form id="form-excluir">
+            <label for="nome-heroi-excluir">Nome do Herói:</label>
+            <input type="text" id="nome-heroi-excluir" name="nome-heroi-excluir" required><br><br>
+            <button type="submit" id="btn-dialog-excluir">Excluir</button>
+            <button type="button" id="btn-dialog-excluir-fechar">X</button>
+        </form>
     </dialog>
     
 
