--- a/heroes_lista.html
+++ b/heroes_lista.html
@@ -37,6 +37,8 @@
     <table id="tabela-herois">
         <thead>
             <tr>
+                <th></th>
+                <th>Imagem</th>
                 <th>Nome Real</th>
                 <th>Nome Herói</th>
                 <th>Sexo</th>
