--- a/heroes.html
+++ b/heroes.html
@@ -25,42 +25,65 @@
             <label for="imagem-url">URL da Imagem:</label>
             <input type="url" name="imagem-url" id="imagem-url" placeholder="Digite a URL da imagem do herói">
 
-            <label for="nome-real">Nome Real:</label>
-            <input type="text" id="nome-real" name="nome-real" required><br><br>
+            <div class="linha-dupla">
+                <div>
+                    <label for="nome-real">Nome Real:</label>
+                    <input type="text" id="nome-real" name="nome-real" required><br><br>
+                </div>
+                <div>
+                    <label for="nome-heroi">Nome Herói:</label>
+                    <input type="text" id="nome-heroi" name="nome-heroi" required><br><br>
+                </div>
+            </div>
 
-            <label for="nome-heroi">Nome Herói:</label>
-            <input type="text" id="nome-heroi" name="nome-heroi" required><br><br>
+            <div class="linha-tripla">
+                <div>
+                    <label for="sexo">Sexo:</label>
+                    <select id="sexo" name="sexo" required>
+                        <option value="masculino">Masculino</option>
+                        <option value="feminino">Feminino</option>
+                    </select><br><br>
+                </div>
+                <div>
+                    <label for="altura">Altura (em m):</label>
+                    <input type="number" id="altura" name="altura" min="0.5" max="3" step="0.01" required><br><br>
+                </div>
+                <div>
+                    <label for="peso">Peso (em kg):</label>
+                    <input type="number" id="peso" name="peso" min="30" max="500" required><br><br>
+                </div>
+            </div>
 
-            <label for="sexo">Sexo:</label>
-            <select id="sexo" name="sexo" required>
-                <option value="masculino">Masculino</option>
-                <option value="feminino">Feminino</option>
-            </select><br><br>
+            <div class="linha-dupla">
+                <div>
+                    <label for="data-nascimento">Data de Nascimento:</label>
+                    <input type="date" id="data-nascimento" name="data-nascimento" required><br><br>
+                </div>
+                <div>
+                    <label for="local-nascimento">Local de Nascimento:</label>
+                    <input type="text" id="local-nascimento" name="local-nascimento" required><br><br>
+                </div>
+            </div>
 
-            <label for="altura">Altura (em m):</label>
-            <input type="number" id="altura" name="altura" min="0.5" max="3" step="0.01" required><br><br>
+            <div class="linha-dupla">
+                <div>
+                    <label for="nivel-forca">Nível de Força (0 a 100):</label>
+                    <input type="number" id="nivel-forca" name="nivel-forca" min="0" max="100" required><br><br>
+                </div>
+                <div>
+                    <label for="popularidade">Popularidade (0 a 100):</label>
+                    <input type="number" id="popularidade" name="popularidade" min="0" max="100" required><br><br>
+                </div>
+            </div>
 
-            <label for="peso">Peso (em kg):</label>
-            <input type="number" id="peso" name="peso" min="30" max="500" required><br><br>
-
-            <label for="data-nascimento">Data de Nascimento:</label>
-            <input type="date" id="data-nascimento" name="data-nascimento" required><br><br>
-
-            <label for="local-nascimento">Local de Nascimento:</label>
-            <input type="text" id="local-nascimento" name="local-nascimento" required><br><br>
-
-            <label for="nivel-forca">Nível de Força (0 a 100):</label>
-            <input type="number" id="nivel-forca" name="nivel-forca" min="0" max="100" required><br><br>
-
-            <label for="popularidade">Popularidade (0 a 100):</label>
-            <input type="number" id="popularidade" name="popularidade" min="0" max="100" required><br><br>
-
-            <label for="status">Status:</label>
-            <select id="status" name="status" required>
-                <option value="ativo">Ativo</option>
-                <option value="inativo">Inativo</option>
-                <option value="banido">Banido</option>
-            </select><br><br>
+            <div>
+                <label for="status">Status:</label>
+                <select id="status" name="status" required>
+                    <option value="ativo">Ativo</option>
+                    <option value="inativo">Inativo</option>
+                    <option value="banido">Banido</option>
+                </select><br><br>
+            </div>
 
             <button type="submit" id="btn-dialog-cadastrar">Cadastrar</button>
             <button type="button" id="btn-dialog-cadastrar-fechar">X</button>
