--- a/heroes_lista.html
+++ b/heroes_lista.html
@@ -51,6 +51,7 @@
                 <th>Status</th>
                 <th>Vitórias</th>
                 <th>Derrotas</th>
+                <th>Poderes</th>
             </tr>
         </thead>
         <tbody>
@@ -136,6 +137,11 @@
                     <label>Derrotas:</label>
                     <input type="number" id="editar-derrotas" name="derrotas" required />
                 </div>
+            </div>
+
+            <div>
+                <label>Poderes</label>
+                <input type="text" id="editar-poderes" name="poderes">
             </div>
     
             <button type="button" id="salvar-edicao">Salvar</button>
