1111 - Finalizando mostrar crimes, falta CUD.

--- a/heroes_lista.html
+++ b/heroes_lista.html
@@ -8,8 +8,11 @@
 </head>
 <body>
     <div id="header">
-        <a href="heroes.html">
+        <a href="index.html">
             <button id="btn-home"><i class="fas fa-home"></i>Home</button>
+        </a>
+        <a href="heroes.html">
+            <button id="btn-herois">Herois</button>
         </a>
         <h1 id="titulo">Lista de herois</h1>
     </div>
