--- a/heroes.html
+++ b/heroes.html
@@ -4,10 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Herois</title>
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/heroes.css">
 </head>
 <body>
-    <h1 id="titulo">CRUD de Herois</h1>
+    <div id="cabecalho">
+        <div class="btn">
+            <a href="index.html">
+                <button id="btn-home">Home</button>
+            </a>
+        </div>
+        <h1 id="titulo">CRUD de Herois</h1>
+    </div>
 
     <div class="btn">
         <button id="btn-cadastrar">Cadastrar Heroi</button>
