--- a/crimes.html
+++ b/crimes.html
@@ -22,9 +22,17 @@
             <option value="asc">Crescente</option>
             <option value="desc">Decrescente</option>
         </select>
+
+        <select id="input-data">
+            <option value="">Data</option>
+            <option value="asc">Antigos</option>
+            <option value="desc">Recentes</option>
+        </select>
         
         <button id="btn-busca-nome-status">Buscar</button>
         <button id="btn-todos">Todos</button>
+
+        <button id="btn-cadastrar-crime">Cadastrar Crime</button>
     </div>
     <table id="tabela-crimes">
         <thead>
@@ -42,6 +50,35 @@
             <!--Dados dos heróis serão preenchidos aqui-->
         </tbody>
     </table>
+
+    <dialog id="dialog-cadastrar">
+        <h2>Cadastrar Crime</h2>
+
+        <form id="form-cadastrar">
+            <label for="nome-crime">Nome Crime:</label>
+            <input type="text" id="nome-crime" name="nome-crime" required><br><br>
+
+            <label for="descricao-crime">Descrição Crime:</label>
+            <textarea name="desc-crime" id="desc-crime" rows="4" required></textarea><br><br>
+
+            <div id="linha-dupla">
+                <div>
+                    <label for="data-crime">Data Crime:</label>
+                    <input type="date" name="data-crime" id="data-crime" required><br><br>
+                </div>
+                <div>
+                    <label for="severidade">Severidade(1 a 10):</label>
+                    <input type="number" id="severidade" name="severidade" min="1" max="10" required><br><br>
+                </div>
+            </div>
+
+            <label for="nome-heroi">Herói Responsável:</label>
+            <input type="text" id="nome-heroi" name="nome-heroi" required><br><br>
+
+            <button type="submit" id="btn-dialog-cadastrar">Cadastrar</button>
+            <button type="button" id="btn-dialog-cadastrar-fechar">X</button>
+        </form>
+    </dialog>
 
     <script src="js/crime.js"></script>
 </body>
