1113 - Simulador de Batalha quase pronto

--- a/index.html
+++ b/index.html
@@ -22,5 +22,15 @@
             <button id="btn-crimes">Crimes</button>
         </a>
     </div>
+    <div class="btn">
+        <a href="missoes.html">
+            <button id="btn-missoes">Missões</button>
+        </a>
+    </div>
+    <div class="btn">
+        <a href="batalha.html">
+            <button id="btn-batalha">Lutar</button>
+        </a>
+    </div>
 </body>
 </html>
