1113 - Tenho que estilizar a batalha e o dialog dela.

--- a/batalha.html
+++ b/batalha.html
@@ -24,7 +24,10 @@
             <div id="heroi1-dados"></div>
         </div>
 
-        <div id="vs">X</div>
+        <div id="meio">
+            <p id="vs">X</p>
+            <button id="btn-batalhar">Simular Batalha</button>
+        </div>
 
         <div class="seletor" id="heroi2">
             <label for="select-heroi2">Escolha o herói 2:</label>
@@ -36,7 +39,6 @@
         </div>
     </div>
 
-    <button id="btn-batalhar">Simular Batalha</button>
 
     <dialog id="dialog-content">
             <h3>Batalha em andamento...</h3>
