--- a/batalha.html
+++ b/batalha.html
@@ -41,7 +41,7 @@
 
 
     <dialog id="dialog-content">
-            <h3>Batalha em andamento...</h3>
+            <h3 id="dialog-titulo">Batalha em andamento...</h3>
             <div id="etapas-batalha"></div>
             <button id="fechar-dialog">X</button>
     </dialog>
