1811 - Melhorando o cadastro de crimes

--- a/crimes.html
+++ b/crimes.html
@@ -73,7 +73,9 @@
             </div>
 
             <label for="nome-heroi">Herói Responsável:</label>
-            <input type="text" id="nome-heroi" name="nome-heroi" required><br><br>
+            <select name="nome-heroi" id="nome-heroi" required>
+                <option value="">Selecione um herói</option>
+            </select>
 
             <button type="submit" id="btn-dialog-cadastrar">Cadastrar</button>
             <button type="button" id="btn-dialog-cadastrar-fechar">X</button>
