1811 - Implementando o registro e edição de poderes

--- a/heroes.html
+++ b/heroes.html
@@ -92,6 +92,18 @@
                 </select><br><br>
             </div>
 
+            <div class="linha-poderes">
+                <div>
+                    <label for="poderes">Poderes:</label>
+                    <input type="text" name="poderes" id="poderes" placeholder="Digite os poderes do herói">
+                </div>
+                <div>
+                    <button type="button" id="btn-adicionar-poder">Adicionar Poder</button>
+                </div>
+            </div>
+
+            <div id="poderes-lista"></div>
+
             <button type="submit" id="btn-dialog-cadastrar">Cadastrar</button>
             <button type="button" id="btn-dialog-cadastrar-fechar">X</button>
         </form>
