--- a/heroes_lista.html
+++ b/heroes_lista.html
@@ -14,6 +14,9 @@
         <a href="heroes.html">
             <button id="btn-herois">Herois</button>
         </a>
+        <a href="batalha.html">
+            <button id="btn-batalha">Lutar!</button>
+        </a>
         <h1 id="titulo">Lista de herois</h1>
     </div>
     
