2211 - Falta implementar os herois nas missões.

--- a/missoes.html
+++ b/missoes.html
@@ -41,7 +41,19 @@
 
             <div class="form-group">
                 <label for="recompensa-missao">Recompensa:</label>
-                <input type="text" id="recompensa-missao" name="recompensa-missao" required>
+                <select name="recompensa-missao" id="recompensa-missao" required>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5</option>
+                    <option value="6">6</option>
+                    <option value="7">7</option>
+                    <option value="8">8</option>
+                    <option value="9">9</option>
+                    <option value="10">10</option>
+                </select>
             </div>
 
             <div class="form-group">
@@ -49,7 +61,6 @@
                 <select id="resultado-missao" name="resultado-missao" required>
                     <option value="sucesso">Sucesso</option>
                     <option value="fracasso">Fracasso</option>
-                    <option value="em_andamento">Em andamento</option>
                 </select>
             </div>
 
