--- a/missoes_lista.html
+++ b/missoes_lista.html
@@ -18,7 +18,7 @@
     </div>
 
     <div id="filtros">
-        <input type="text" id="input-nome-missao" placeholder="Nome da Missão">
+        <input type="text" id="input-nome-missao" placeholder="Nome do herói">
         <select id="input-dificuldade">
             <option value="Dificuldade">Dificuldade</option>
             <option value="1">1</option>
@@ -32,12 +32,6 @@
             <option value="8">8</option>
             <option value="9">9</option>
             <option value="10">10</option>
-        </select>
-        <select id="input-resultado">
-            <option value="">Resultado</option>
-            <option value="sucesso">Sucesso</option>
-            <option value="fracasso">Fracasso</option>
-            <option value="em_andamento">Em andamento</option>
         </select>
         <button id="btn-busca-missoes">Buscar</button>
         <button id="btn-todas-missoes">Mostrar Todas</button>
@@ -72,14 +66,25 @@
             </div>
             <div>
                 <label for="editar-recompensa">Recompensa:</label>
-                <input type="text" id="editar-recompensa" required>
+                <select id="editar-recompensa" required>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5</option>
+                    <option value="6">6</option>
+                    <option value="7">7</option>
+                    <option value="8">8</option>
+                    <option value="9">9</option>
+                    <option value="10">10</option>
+                </select>
             </div>
             <div>
                 <label for="editar-resultado">Resultado:</label>
                 <select id="editar-resultado" required>
                     <option value="sucesso">Sucesso</option>
                     <option value="fracasso">Fracasso</option>
-                    <option value="em_andamento">Em andamento</option>
                 </select>
             </div>
             <div>
