2211 - Implementado CR de missões com herois.

--- a/missoes.html
+++ b/missoes.html
@@ -45,7 +45,6 @@
                     <option value="1">1</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
-                    <option value="3">3</option>
                     <option value="4">4</option>
                     <option value="5">5</option>
                     <option value="6">6</option>
@@ -70,7 +69,6 @@
                     <option value="1">1</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
-                    <option value="3">3</option>
                     <option value="4">4</option>
                     <option value="5">5</option>
                     <option value="6">6</option>
@@ -81,6 +79,20 @@
             
                 </select>
             </div>
+
+            <div class="linha-herois">
+                <div>
+                    <label for="herois">Heróis:</label>
+                    <select id="herois" name="herois" required>
+
+                    </select>
+                </div>
+                <div>
+                    <button type="button" id="btn-adicionar-heroi">Adicionar Herói</button>
+                </div>
+            </div>
+
+            <div id="herois-lista"></div>
                 
             <button id="btn-dialog-cadastrar" class="btn-confirm">Cadastrar</button>
             <button type="button" id="btn-dialog-cadastrar-fechar">X</button>
