--- a/missoes_lista.html
+++ b/missoes_lista.html
@@ -20,7 +20,7 @@
     <div id="filtros">
         <input type="text" id="input-nome-missao" placeholder="Nome do herói">
         <select id="input-dificuldade">
-            <option value="Dificuldade">Dificuldade</option>
+            <option value="">Dificuldade</option>
             <option value="1">1</option>
             <option value="2">2</option>
             <option value="3">3</option>
@@ -46,6 +46,8 @@
                 <th>Recompensa</th>
                 <th>Resultado</th>
                 <th>Nível de Dificuldade</th>
+                <th>Heróis Responsáveis</th>
+                <th>Imagem Heróis</th>
             </tr>
         </thead>
         <tbody>
