2511 - Alteração na estrutura toda.

--- a/batalha.html
+++ b/batalha.html
@@ -8,10 +8,26 @@
 </head>
 <body>
     <div id="header">
-        <a href="index.html">
-            <button id="btn-home"><i class="fas fa-home"></i>Home</button>
-        </a>
-        <h1 id="titulo">Simulador de Batalha</h1>
+        <div>
+            <h1 id="titulo">Trabalho The Boys</h1>
+        </div>
+        <nav id="menu">
+            <a href="index.html">
+                <button id="btn-home"><i class="fas fa-home"></i> Home</button>
+            </a>
+            <a href="heroes_lista.html">
+                <button id="btn-herois">Heróis</button>
+            </a>
+            <a href="crimes.html">
+                <button id="btn-crimes">Crimes</button>
+            </a>
+            <a href="missoes_lista.html">
+                <button id="btn-missoes">Missões</button>
+            </a>
+            <a href="batalha.html">
+                <button id="btn-batalha">Lutar!</button>
+            </a>
+        </nav>
     </div>
 
     <div id="div-batalha">
