--- a/index.html
+++ b/index.html
@@ -12,25 +12,8 @@
         <h3>Marcelo Honda, Dimitri Cinnanti, Victor Oleskovicz, Paulo Henrique, Lucas Vieira, Gabriel Bernardo</h3>
     </div>
 
-    <div class="btn">
-        <a href="heroes.html">
-            <button id="btn-herois">Herois</button>
-        </a>
-    </div>
-    <div class="btn">
-        <a href="crimes.html">
-            <button id="btn-crimes">Crimes</button>
-        </a>
-    </div>
-    <div class="btn">
-        <a href="missoes.html">
-            <button id="btn-missoes">Missões</button>
-        </a>
-    </div>
-    <div class="btn">
-        <a href="batalha.html">
-            <button id="btn-batalha">Lutar</button>
-        </a>
-    </div>
+    <a href="heroes_lista.html">
+        <button id="iniciar">Iniciar</button>
+    </a>
 </body>
 </html>
