--- a/crimes.html
+++ b/crimes.html
@@ -8,11 +8,29 @@
 </head>
 <body>
     <div id="header">
-        <a href="index.html">
-            <button id="btn-home"><i class="fas fa-home"></i>Home</button>
-        </a>
-        <h1 id="titulo">Lista de Crimes</h1>
+        <div>
+            <h1 id="titulo">Trabalho The Boys</h1>
+        </div>
+        <nav id="menu">
+            <a href="index.html">
+                <button id="btn-home"><i class="fas fa-home"></i> Home</button>
+            </a>
+            <a href="heroes_lista.html">
+                <button id="btn-herois">Heróis</button>
+            </a>
+            <a href="crimes.html">
+                <button id="btn-crimes">Crimes</button>
+            </a>
+            <a href="missoes_lista.html">
+                <button id="btn-missoes">Missões</button>
+            </a>
+            <a href="batalha.html">
+                <button id="btn-batalha">Lutar!</button>
+            </a>
+        </nav>
     </div>
+    
+    <h2 id="subtitulo">Lista de Crimes</h2>
 
     <div id="filtros">
         <input type="text" id="input-nome" placeholder="Buscar crime por herói.">
