2511 - Seleção de heróis para missão

--- a/missoes_lista.html
+++ b/missoes_lista.html
@@ -109,18 +109,11 @@
             </div>
 
             <div class="linha-herois">
-                <div>
-                    <label for="herois">Heróis:</label>
-                    <select id="herois" name="herois" required>
-
-                    </select>
-                </div>
-                <div>
-                    <button type="button" id="btn-adicionar-heroi">Adicionar Herói</button>
+                <div id="herois-selecionados">
+                    <h3>Heróis Selecionados:</h3>
+                    <div id="herois-lista"></div>
                 </div>
             </div>
-
-            <div id="herois-lista"></div>
                 
             <button id="btn-dialog-cadastrar" class="btn-confirm">Cadastrar</button>
             <button type="button" id="btn-dialog-cadastrar-fechar">X</button>
