2611 - Algumas missões não estão sendo cadastradas, mesmo após clicar em confirmar

--- a/missoes_lista.html
+++ b/missoes_lista.html
@@ -84,6 +84,14 @@
             </div>
 
             <div class="form-group">
+                <label for="tipo-recompensa">Tipo de Recompensa:</label>
+                <select name="tipo-recompensa" id="tipo-recompensa">
+                    <option value="popularidade">Popularidade</option>
+                    <option value="nivel_forca">Força</option>
+                </select>
+            </div>
+
+            <div class="form-group">
                 <label for="resultado-missao">Resultado:</label>
                 <select id="resultado-missao" name="resultado-missao" required>
                     <option value="sucesso">Sucesso</option>
@@ -131,6 +139,7 @@
                 <th>Nome</th>
                 <th>Descrição</th>
                 <th>Recompensa</th>
+                <th>Tipo Recompensa</th>
                 <th>Resultado</th>
                 <th>Nível de Dificuldade</th>
                 <th>Heróis Responsáveis</th>
