--- a/batalha.html
+++ b/batalha.html
@@ -41,6 +41,56 @@
         </div>
 
         <div id="meio">
+            <div id="opcoes-batalha">
+                <div class="checkbox-pair">
+                    <label>
+                        <input type="checkbox" id="heroi1-arma">
+                        <span>
+                            <span class="linha-superior">Arma especial</span>
+                            <span class="linha-inferior">(+1 de dano)</span>
+                        </span>
+                    </label>
+                    <label>
+                        <span>
+                            <span class="linha-superior">Arma especial</span>
+                            <span class="linha-inferior">(+1 de dano)</span>
+                        </span>
+                        <input type="checkbox" id="heroi2-arma">
+                    </label>
+                </div>
+                <div class="checkbox-pair">
+                    <label>
+                        <input type="checkbox" id="heroi1-energetico">
+                        <span>
+                            <span class="linha-superior">Energético</span>
+                            <span class="linha-inferior">(começa atacando)</span>
+                        </span>
+                    </label>
+                    <label>
+                        <span>
+                            <span class="linha-superior">Energético</span>
+                            <span class="linha-inferior">(começa atacando)</span>
+                        </span>
+                        <input type="checkbox" id="heroi2-energetico">
+                    </label>
+                </div>
+                <div class="checkbox-pair">
+                    <label>
+                        <input type="checkbox" id="heroi1-machucado">
+                        <span>
+                            <span class="linha-superior">Machucado</span>
+                            <span class="linha-inferior">(-2 de vida)</span>
+                        </span>
+                    </label>
+                    <label>
+                        <span>
+                            <span class="linha-superior">Machucado</span>
+                            <span class="linha-inferior">(-2 de vida)</span>
+                        </span>
+                        <input type="checkbox" id="heroi2-machucado">
+                    </label>
+                </div>
+            </div>            
             <p id="vs">X</p>
             <button id="btn-batalhar">Simular Batalha</button>
         </div>
