--- a/missoes_lista.html
+++ b/missoes_lista.html
@@ -36,17 +36,8 @@
         <input type="text" id="input-nome-missao" placeholder="Nome do herói">
         <select id="input-dificuldade">
             <option value="">Dificuldade</option>
-            <option value="1">1</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5">5</option>
-            <option value="6">6</option>
-            <option value="7">7</option>
-            <option value="8">8</option>
-            <option value="9">9</option>
-            <option value="10">10</option>
+            <option value="asc">Crescente</option>
+            <option value="desc">Decrescente</option>
         </select>
         <button id="btn-busca-missoes">Buscar</button>
         <button id="btn-todas-missoes">Mostrar Todas</button>
