1204 - Corrigindo problema na edição de poderes.

--- a/heroes_lista.html
+++ b/heroes_lista.html
@@ -244,15 +244,15 @@
 
             <div class="linha-poderes">
                 <div>
-                    <label for="poderes">Poderes:</label>
-                    <input type="text" name="poderes" id="poderes" placeholder="Digite os poderes do herói">
+                    <label for="poderes-editar">Poderes:</label>
+                    <input type="text" name="poderes-editar" id="poderes-editar" placeholder="Digite os poderes do herói">
                 </div>
                 <div>
-                    <button type="button" id="btn-adicionar-poder">Adicionar Poder</button>
+                    <button type="button" id="btn-adicionar-poder-editar">Adicionar Poder</button>
                 </div>
             </div>
 
-            <div id="poderes-lista"></div>
+            <div id="poderes-lista-editar"></div>
     
             <button type="button" id="salvar-edicao">Salvar</button>
             <button type="button" id="btn-sair-edicao">Cancelar</button>
