--- a/missoes.html
+++ b/missoes.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lista de Missões</title>
-    <link rel="stylesheet" href="style/missoes_lista.css">
+    <link rel="stylesheet" href="style/missoes.css">
 </head>
 <body>
     <div id="header">
@@ -15,13 +15,13 @@
             <a href="index.html">
                 <button id="btn-home"><i class="fas fa-home"></i> Home</button>
             </a>
-            <a href="heroes_lista.html">
+            <a href="herois.html">
                 <button id="btn-herois">Heróis</button>
             </a>
             <a href="crimes.html">
                 <button id="btn-crimes">Crimes</button>
             </a>
-            <a href="missoes_lista.html">
+            <a href="missoes.html">
                 <button id="btn-missoes">Missões</button>
             </a>
             <a href="batalha.html">
@@ -197,6 +197,6 @@
         </form>
     </dialog>
 
-    <script src="js/missoes_lista.js"></script>
+    <script src="js/missoes.js"></script>
 </body>
 </html>
