--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h3>Marcelo Honda, Dimitri Cinnanti, Victor Oleskovicz, Paulo Henrique, Lucas Vieira, Gabriel Bernardo</h3>
     </div>
 
-    <a href="heroes_lista.html">
+    <a href="herois.html">
         <button id="iniciar">Iniciar</button>
     </a>
 </body>
